# llm-zoomcamp

./: README.md  notebook.ipynb  pyproject.toml
01-agentic-rag/: agents_gemini.ipynb  agents_groq.ipynb  notebook.ipynb  persistent_rag.ipynb  persistent_rag_ingest.ipynb  rag.ipynb  rag_groq_helper.py  rag_helper.py
02-vector-search/: vector_search.ipynb
03-orchestration/: 03-orchestration-homework.md
