[project]
name = "llm-zoomcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-ai-inference>=1.0.0b9",
    "google-genai>=2.10.0",
    "groq>=1.5.0",
    "jupyter>=1.1.1",
    "minsearch>=0.2.0",
    "openai>=2.44.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
    "sqlitesearch>=0.3.0",
    "toyaikit>=0.0.11",
]
